--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
     <nav class="navbar">
       <div class="logo">
         <img src="assets/images/logo.png" alt="Logo" style="width: 100px; height: 50px; vertical-align: middle" />
-        نوس
+        سَـرمد
       </div>
       <div class="nav-links">
         <a href="FirstPage.html">الرئيسية</a>
