--- a/Jahelia.html
+++ b/Jahelia.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>نوس - امرؤ القيس</title>
+    <title>سَـرمد - امرؤ القيس</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
@@ -22,7 +22,7 @@
           alt="Logo"
           style="width: 100px; height: 50px; vertical-align: middle"
         />
-        نوس
+        سَـرمد
       </div>
       <div class="nav-links">
         <a href="FirstPage.html">الرئيسية</a>
